@@ -45,11 +45,30 @@ namespace Xsd2Code.Addin
         /// Analyse file to find generation option.
         /// </summary>
         /// <param name="xsdFilePath">The XSD file path.</param>
-        public void Init(string xsdFilePath)
+        /// <param name="languageIdentifier">The language identifier.</param>
+        /// <param name="defaultNamespace">The default namespace.</param>
+        public void Init(string xsdFilePath, string languageIdentifier, string defaultNamespace)
         {
             string outputFile;
-            var paramFieldFromFile = GeneratorParams.LoadFromFile(xsdFilePath, out outputFile);
-            this.generatorParams = paramFieldFromFile ?? new GeneratorParams();
+            this.generatorParams = GeneratorParams.LoadFromFile(xsdFilePath, out outputFile);
+
+            if (this.generatorParams == null)
+            {
+                this.generatorParams = new GeneratorParams();
+                switch (languageIdentifier)
+                {
+                    case "{B5E9BD33-6D3E-4B5D-925E-8A43B79820B4}":
+                        this.generatorParams.Language = GenerationLanguage.VisualBasic;
+                        break;
+                    case "{B5E9BD36-6D3E-4B5D-925E-8A43B79820B4}":
+                        this.generatorParams.Language = GenerationLanguage.VisualCpp;
+                        break;
+                    default:
+                        this.generatorParams.Language = GenerationLanguage.CSharp;
+                        break;
+                }
+                this.generatorParams.NameSpace = defaultNamespace;
+            }
 
             this.propertyGrid.SelectedObject = this.generatorParams;
             this.OutputFile = outputFile;
